fix settings formatting and key copying

--- a/mods/settings/web/css/settings-base.css
+++ b/mods/settings/web/css/settings-base.css
@@ -89,6 +89,11 @@
 	width: 100%;
 }
 
+
+.settings-appspace .profile-public-key {
+	width: unset;
+}
+
 .saito-switch {
 	height: 100%;
 	display: flex;
