--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -261,6 +261,7 @@
   justify-content: center;
   cursor: pointer;
   gap: 0.75rem;
+  font-family: monospace;
 }
 
 .pubkey-containter:hover i {
@@ -288,7 +289,7 @@
 .profile-public-key {
   font-size: 1.7rem;
   display: grid;
-  grid-template-columns: minmax(12rem, 1fr) min-content;
+  grid-template-columns: minmax(12.2rem, 1fr) min-content;
   width: min-content;
 }
 
