fix header display

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -300,7 +300,9 @@
 }
 
 .profile-public-key.generate-keys {
-  width: 100%;
+  width: fit-content;
+  max-width: 100%;
+  font-family: var(--saito-font);
 }
 
 
