crypto ui improvements

--- a/mods/arcade/web/css/arcade-wizard.css
+++ b/mods/arcade/web/css/arcade-wizard.css
@@ -317,6 +317,9 @@
 	cursor: pointer;
 	border-bottom: 1px dashed;
 	font-size: 2rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 
