--- a/web/saito/css-imports/saito-crypto-transfer-manager.css
+++ b/web/saito/css-imports/saito-crypto-transfer-manager.css
@@ -1,6 +1,6 @@
 .game-crypto-transfer-manager-container {
   max-width: 95vw;
-  text-align:center;
+  align-items: center;
   color: white;
   background-color:rgba(0,0,0,0.9);
   border-radius: 1rem;
@@ -9,7 +9,7 @@
   gap: 2.5rem;
   width: auto;
   padding: 3rem;
-  min-width: min(55rem, 100vw);
+  min-width: 55rem;
 }
 
 .saito-overlay:has(.game-crypto-transfer-manager-container) {
@@ -31,10 +31,11 @@ input[type="checkbox"].ignore_checkbox {
 }
 
 .game-crypto-transfer-manager-container .stake-input-container{
-  margin: auto;
   position: relative;
   margin-bottom: 2.5rem;
   display: flex;
+  gap: 1rem;
+  width: max-content;
 }
 
 .game-crypto-transfer-manager-container .stake-input-container.hidden{
@@ -42,9 +43,13 @@ input[type="checkbox"].ignore_checkbox {
 }
 
 .stake-input-error {
+  position: absolute;
   display: none;
-  color: red;
+  color: rgb(255, 10, 5);
   font-size: 1.6rem;
+  top: 105%;
+  left: 1rem;
+  font-weight: bolder;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -63,12 +68,14 @@ input[type=number] {
   background: none;
   border: none;
   color: var(--color-white);
+  border-radius: 0;
   border-bottom: 1px solid var(--color-white);
   text-align: center;
   padding: 1rem;
   font-size: 4rem;
   display: inline-block;
-  width: 100%;
+  width: 80%;
+  max-width: 25rem;
 }
 
 .stake-input-container .crypto_msg {
@@ -140,6 +147,7 @@ input[type=number] {
     padding: 0rem;
     width: auto;
     line-height: 6rem;
+    margin-top: 1rem;
 }
 
 .commentary {
@@ -153,13 +161,13 @@ input[type=number] {
 }
 
 .crypto-stake-confirm-container {
-  margin: 0rem;
+  position: relative;
   display: flex;
   flex-direction: row;
   padding: 0rem;
   gap: 1rem;
   width: fit-content;
-  margin: auto;
+  min-width: 35rem; 
 }
 
 .crypto-stake-confirm-container input {
