--- a/mods/arcade/web/css/arcade-overlays.css
+++ b/mods/arcade/web/css/arcade-overlays.css
@@ -199,6 +199,7 @@
 		display: grid;
 		grid-gap: 1rem;
 		grid-template-areas: "a a" "b c";
+		grid-template-columns: 1fr 1fr;
 		width: 100%;
 	}
 	.arcade-game-controls .saito-button {
