--- a/web/saito/css-imports/saito-crypto-transfer-manager.css
+++ b/web/saito/css-imports/saito-crypto-transfer-manager.css
@@ -38,6 +38,10 @@ input[type="checkbox"].ignore_checkbox {
   width: max-content;
 }
 
+.game-crypto-transfer-manager-container .stake-input-container.wallet-balance {
+  margin-bottom: 1.5rem;
+}
+
 .game-crypto-transfer-manager-container .stake-input-container.hidden{
   display: none;
 }
@@ -113,19 +117,6 @@ input[type=number] {
     line-height: 2.8rem;
 }
 
-.crypto_transfer_btn {
-  background-color: var(--saito-button-background); /* testing */
-  color: var(--color-white);
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  font-size: 1.8rem;
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  width: fit-content;
-}
-
 .crypto_transfer_btn.secondary {
   background: none;
   color: var(--saito-white);
@@ -139,6 +130,8 @@ input[type=number] {
 .crypto-stake-offer-btn-container {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 .crypto_amount_btn {
