--- a/mods/modtools/web/css/modtools-base.css
+++ b/mods/modtools/web/css/modtools-base.css
@@ -22,11 +22,23 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
+}
+
+.modtools-container .saito-identicon-box {
+  min-width: 3.5rem;
+}
+
+.modtools-container-header {
+  display: flex;
+  gap: 3rem;
+  align-items: center;
 }
 
 .modtools-container-title {
   font-size: 1.8rem;
   font-weight: bold;
+  flex: 1;
 }
 
 .modtools-container {
@@ -37,16 +49,24 @@
   border: 1px solid black;
 }
 
+.modtools-icon-holder {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  width: 4rem;
+  height: 4rem;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .modtools-contact {
   align-items: center;
   display: grid;
-  grid-template-columns: 1fr 0.5fr 2fr;
+  grid-template-columns: minmax(150px, 4fr) minmax(100px, 2fr) minmax(50px, 1fr) minmax(150px, 4fr);
   text-align: left;
-}
-
-.modtools-contact-daetails {
-  display: flex;
-  align-items: center;
   gap: 1rem;
 }
 
