--- a/web/saito/css-imports/game-observer.css
+++ b/web/saito/css-imports/game-observer.css
@@ -6,6 +6,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 450px;
+  max-width: 100vw;
   max-height: 180px;
   background-color: #111D;
   color: ghostwhite;
