--- a/mods/redsquare/web/css/redsquare-base.css
+++ b/mods/redsquare/web/css/redsquare-base.css
@@ -37,6 +37,12 @@ body {
 	color: var(--font-color-redsquare-interaction);
 }
 
+.debug_overlay {
+	width: min(800px, 90vw);
+	max-height: 100vh;
+	overflow: scroll;
+	padding: 2rem;
+}
 
 .redsquare-home {
 	margin: -2.5rem 0 0 0;
