--- a/mods/paths/web/css/paths-loss.css
+++ b/mods/paths/web/css/paths-loss.css
@@ -70,3 +70,20 @@ font-size: 2rem;
 	row-gap: 5rem;
 	column-gap: 2rem;
 }
+
+.destroyed-unit {
+    position: relative;
+    display: block;
+}
+
+.destroyed_unit::after {
+    content: "";
+    position: absolute;
+    top: 0px;  /* Adjust position */
+    right: 0px; /* Adjust position */
+    width: 100%; /* Size of X */
+    height: 100%;
+    background: url('/paths/img/cancel_x.png') no-repeat center;
+    background-size: contain;
+    pointer-events: none; /* Prevent interaction */
+}
