RS: fix how curation filters tweets

--- a/web/saito/css-imports/saito-tweet.css
+++ b/web/saito/css-imports/saito-tweet.css
@@ -157,6 +157,10 @@
   display: none;
 }
 
+.tweet-html-markers.show{
+  display: flex;
+}
+
 .tweet-notice .saito-address {
   display: inline;
   margin-right: 0.3rem;
