Modify send flow

--- a/mods/atr/web/css/atr-base.css
+++ b/mods/atr/web/css/atr-base.css
@@ -304,6 +304,12 @@ textarea {
     align-items: center;
 }
 
+.utxo-div.send-nft {
+    gap: 0rem;
+    width: auto;
+    flex-direction: column;
+}
+
 #utxo-list {
     display: flex;
     flex-direction: column;
