title change to Rankings in RS

--- a/web/saito/css-imports/saito-league.css
+++ b/web/saito/css-imports/saito-league.css
@@ -412,3 +412,10 @@ span.attention {
 		/* testing, haven t seen any of this */
 	}
 }
+
+.league-rankings .sidebar-title {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-right: 1rem;
+}
