--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -53,7 +53,7 @@
 }
 
 .chat-manager-list {
-  gap: 1.5rem;
+  gap: 0.75rem;
   display: flex;
   flex-direction: column;
   min-height: 22rem;
@@ -768,7 +768,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  padding: 1rem;
+  padding: 0.6rem 1.1rem;
   background: var(--background-color-chat-popup-main); /* testing */
   font-size: 24px;
 }
@@ -782,12 +782,13 @@
   position: absolute;
   left: 0;
   top: var(--saito-header-height);
-  z-index: 15;
+  z-index: 90;
   width: 300px;
   border: var(--border-thickness-chat-popup) solid var(--border-color-chat-popup);
   box-shadow: var(--box-shadow-sidebar-elements);
   border-radius: var(--border-radius-sidebar-menu);
   height: fit-content;
+  overflow: hidden;
 }
 
 .floating-cm-overlay .chat-manager-header {
@@ -840,11 +841,6 @@
     display: none;
   }
 
-  .close-chat-manager i {
-    height: 6rem;
-    line-height: 3rem;
-  }
-
   .chat-header > .chat-header-nav > i.chat-container-close {
     width: 4rem;
     text-align: center;
@@ -867,7 +863,6 @@
     width: 100vw;
     max-height: -webkit-fill-available;
     max-width: -webkit-fill-available;
-    z-index: 15;
     border-radius: unset;
   }
 
@@ -884,7 +879,7 @@
     height: 40px;
   }
   .chat-manager-overlay .chat-manager-header {
-    height: 6rem;
+    height: 100%;
   }
   .chat-container {
     margin: 0;
