fix: error message clean-up

--- a/mods/paths/web/css/paths-menu.css
+++ b/mods/paths/web/css/paths-menu.css
@@ -3,6 +3,19 @@
   background-color: transparent;
 }
 
+.card.movement {
+
+}
+.card.replacement {
+
+}
+.card.redeployment {
+
+}
+.card.event {
+
+}
+
 .saito-overlay .menu {
 	display: flex;
 	flex-wrap: wrap;
