--- a/mods/paths/web/css/paths-loss.css
+++ b/mods/paths/web/css/paths-loss.css
@@ -78,6 +78,9 @@
     bottom: 0px;
     height: min-content;
     width: 100%;
+    padding-bottom: 1rem;
+    max-height: 20rem;
+    overflow-y: auto;
 }
 
 .loss-overlay .info_header {
@@ -99,7 +102,7 @@
 
 .results_table {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(6, auto);
     grid-template-rows: min-content 1fr 1fr;
     font-size: 2rem;
 }
@@ -114,6 +117,10 @@
 
 .results_table .row-1 .col {
     margin-bottom: 1rem;
+}
+
+.results_table .row-1 .col-2 , .results_table .row-2 .col-2 , .results_table .row-1 .col-5 , .results_table .row-2 .col-5 {
+    height: 92.5%;
 }
 
 .results_table .row-0 > .col , .results_table .row-2 > .col {
@@ -131,7 +138,17 @@
     font-size: 3rem;
     justify-content: center;
 }
+
+.dice .attacker_damage {
+    background-color: yellow;
+}
+
+.dice .defender_damage {
+    background-color: yellow;
+}
+
 .dice {
+    background-color: #efefef;
     aspect-ratio: 1;
     margin-bottom: 0.5rem;
     border: 3px dashed #ddd;
