--- a/mods/paths/web/css/paths-menu.css
+++ b/mods/paths/web/css/paths-menu.css
@@ -3,38 +3,37 @@
   background-color: transparent;
 }
 
-.card.movement {
-
+.card.menu_movement {
+        background-image: url('/paths/img/backgrounds/menu/artillery.png');
 }
-.card.replacement {
-
+.card.menu_redeployment {
+        background-image: url('/paths/img/backgrounds/menu/train.jpg');
 }
-.card.redeployment {
-
+.card.menu_replacement {
+        background-image: url('/paths/img/backgrounds/menu/recruiting.jpg');
 }
-.card.event {
-
+.card.menu_event {
+        background-image: url('/paths/img/backgrounds/menu/planning.jpg');
 }
 
 .saito-overlay .menu {
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
 	row-gap: 1rem;
 	column-gap: 1rem;
 	overflow-y: auto;
-    	height: 90vh;
+    	height: 92.5vh;
     	background-color: transparent;
     	width: 90vw;
     	justify-content: space-between;
-    	gap: 1rem;
-    	min-width: 100%;
+    	gap: 2rem;
 }
 
 .saito-overlay .menu .card {
-	max-width: 42.5vw;
-	flex: 0 0 49%;
+	height: 45.5vh;
+	width: 100%;
 	box-sizing: border-box;
-	height: max-content;
 	cursor: pointer;
 }
 
