--- a/mods/paths/web/css/paths-board.css
+++ b/mods/paths/web/css/paths-board.css
@@ -1,12 +1,6 @@
 
 .turn-track {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-}
-.turn-track.active {
-  background-image: url('/paths/img/turn.png');
-  background-size: cover;
+
 }
 .turn-track-1 {
   top: 213px;
@@ -92,118 +86,7 @@
 
 
 .general-records-track {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-}
-.general-records-track img {
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  z-index: 10;
-}
-.general-records-track-1 img:nth-child(1) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(2) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(3) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(4) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(5) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(6) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(7) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(8) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(9) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(10) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(11) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track-1 img:nth-child(12) {
-  top: -10px;
-  left: -10px;
-}
-.general-records-track img:hover {
-  z-index: 9999;
-}
-.general-records-track img:nth-child(1) {
-  top: -20px;
-  left: -20px;
-}
-.general-records-track img:nth-child(2) {
-  top: 0px;
-  left: 0px;
-}
-.general-records-track img:nth-child(3) {
-  top: 20px;
-  left: 20px;
-}
-.general-records-track img:nth-child(4) {
-  top: 40px;
-  left: 40px;
-}
-.general-records-track img:nth-child(5) {
-  top: 60px;
-  left: 60px;
-}
-.general-records-track img:nth-child(6) {
-  top: 80px;
-  left: 80px;
-}
-.general-records-track img:nth-child(7) {
-  top: 100px;
-  left: 100px;
-}
-.general-records-track img:nth-child(8) {
-  top: 120px;
-  left: 120px;
-}
-.general-records-track img:nth-child(9) {
-  top: 140px;
-  left: 140px;
-}
-.general-records-track img:nth-child(10) {
-  top: 160px;
-  left: 160px;
-}
-.general-records-track img:nth-child(11) {
-  top: 180px;
-  left: 180px;
-}
-.general-records-track img:nth-child(12) {
-  top: 200px;
-  left: 200px;
-}
-.general-records-track-0 {
-  top: 2707px;
-  left: 125px;
+
 }
 .general-records-track-1 {
   top: 2707px;
@@ -372,47 +255,45 @@
 
 
 .central-action-round-track {
-  position: absolute;
-  height: 8rem;
-  width: 8rem;
+
 }
-.central-action-round-track-1 {
+.central-action-roundtrack-1 {
   top: 130px;
   left: 1584px;
 }
-.central-action-round-track-2 {
+.central-action-roundtrack-2 {
   top: 220px;
   left: 1584px;
 }
-.central-action-round-track-3 {
+.central-action-roundtrack-3 {
   top: 220px;
   left: 1669px;
 }
-.central-action-round-track-4 {
+.central-action-roundtrack-4 {
   top: 220px;
   left: 1751px;
 }
-.central-action-round-track-5 {
+.central-action-roundtrack-5 {
   top: 315px;
   left: 1584px;
 }
-.central-action-round-track-6 {
+.central-action-roundtrack-6 {
   top: 315px;
   left: 1670px;
 }
-.central-action-round-track-7 {
+.central-action-roundtrack-7 {
   top: 407px;
   left: 1584px;
 }
-.central-action-round-track-8 {
+.central-action-roundtrack-8 {
   top: 407px;
   left: 1667px;
 }
-.central-action-round-track-9 {
+.central-action-roundtrack-9 {
   top: 407px;
   left: 1752px;
 }
-.central-action-round-track-10 {
+.central-action-roundtrack-10 {
   top: 407px;
   left: 1837px;
 }
@@ -420,41 +301,160 @@
 
 
 .allies-action-round-track {
-  position: absolute;
-  height: 8rem;
-  width: 8rem;
+
 }
-.allies-action-round-track-1 {
+.allies-action-roundtrack-1 {
   top: 2819px;
   left: 1396px;
 }
-.allies-action-round-track-2 {
+.allies-action-roundtrack-2 {
   top: 2914px;
   left: 1396px;
 }
-.allies-action-round-track-3 {
+.allies-action-roundtrack-3 {
   top: 2914px;
   left: 1481px;
 }
-.allies-action-round-track-4 {
-  top: 29140px;
+.allies-action-roundtrack-4 {
+  top: 2914px;
   left: 1564px;
 }
-.allies-action-round-track-5 {
+.allies-action-roundtrack-5 {
   top: 2914px;
   left: 1650px;
 }
-.allies-action-round-track-6 {
+.allies-action-roundtrack-6 {
   top: 2914px;
   left: 1734px;
 }
-.allies-action-round-track-7 {
+.allies-action-roundtrack-7 {
   top: 3007px;
   left: 1395px;
 }
-.allies-action-round-track-8 {
+.allies-action-roundtrack-8 {
   top: 3007px;
   left: 1477px;
+}
+.allies-action-roundtrack-9 {
+  top: 3102px;
+  left: 1396px;
+}
+.allies-action-roundtrack-10 {
+  top: 3102px;
+  lBut I would like to talk about realms, review images and text, and also explain a few decisions that I had to make design-wise, but they are still into guidelines that we already decided. 👍eft: 1479px;
+}
+.allies-action-roundtrack-11 {
+  top: 3102px;
+  left: 1564px;
+}
+.allies-action-roundtrack-12 {
+  top: 3102px;
+  left: 1650px;
+}
+
+
+
+
+.central-mandated-offensive-track {
+
+}
+.central-mandated-offensive-track-1 {
+  top: 136px;
+  left: 2088px;
+}
+.central-mandated-offensive-track-2 {
+  top: 136px;
+  left: 2171px;
+}
+.central-mandated-offensive-track-3 {
+  top: 136px;
+  left: 2257px;
+}
+.central-mandated-offensive-track-4 {
+  top: 136px;
+  left: 2341px;
+}
+.central-mandated-offensive-track-5 {
+  top: 136px;
+  left: 2418px;
+}
+
+
+
+
+.allies-mandated-offensive-track {
+
+}
+.allies-mandated-offensive-track-1 {
+  top: 3078px;
+  left: 2347px;
+}
+.allies-mandated-offensive-track-2 {
+  top: 3078px;
+  left: 2431px;
+}
+.allies-mandated-offensive-track-3 {
+  top: 3078px;
+  left: 2515px;
+}
+.allies-mandated-offensive-track-4 {
+  top: 3078px;
+  left: 2600px;
+}
+.allies-mandated-offensive-track-5 {
+  top: 3078px;
+  left: 2681px;
+}
+
+
+
+
+.us-commitment-track {
+
+}
+.us-commitment-track-1 {
+  top: 2316px;
+  left: 129px;
+}
+.us-commitment-track-2 {
+  top: 2316px;
+  left: 233px;
+}
+.us-commitment-track-3 {
+  top: 2316px;
+  left: 337px;
+}
+.us-commitment-track-4 {
+  top: 2316px;
+  left: 442px;
+}
+
+
+
+
+.russian-capitulation-track {
+
+}
+.russian-capitulation-track-1 {
+  top: 2507px;
+  left: 146px;
+}
+.russian-capitulation-track-2 {
+  top: 2507px;
+  left: 251px;
+}
+.russian-capitulation-track-3 {
+  top: 2507px;
+  left: 354px;
+}
+.russian-capitulation-track-4 {
+  top: 2507px;
+  left: 459px;
+}
+.russian-capitulation-track-5 {
+  top: 2507px;
+  left: 562px;
+}
 }
 .allies-action-round-track-9 {
   top: 3102px;
@@ -494,191 +494,3 @@
   left: 2257px;
 }
 .central-mandated-offensive-track-4 {
-  top: 136px;
-  left: 2341px;
-}
-.central-mandated-offensive-track-5 {
-  top: 136px;
-  left: 2418px;
-}
-
-
-
-
-.allies-mandated-offensive-track {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-}
-.allies-mandated-offensive-track-1 {
-  top: 3078px;
-  left: 2347px;
-}
-.allies-mandated-offensive-track-2 {
-  top: 3078px;
-  left: 2431px;
-}
-.allies-mandated-offensive-track-3 {
-  top: 3078px;
-  left: 2515px;
-}
-.allies-mandated-offensive-track-4 {
-  top: 3078px;
-  left: 2600px;
-}
-.allies-mandated-offensive-track-5 {
-  top: 3078px;
-  left: 2681px;
-}
-
-
-
-
-.us-commitment-track {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-}
-.us-commitment-track.active {
-  background-image: url('/paths/img/us_entry.png');
-  background-size: cover;
-}
-.us-commitment-track-1 {
-  top: 2316px;
-  left: 129px;
-}
-.us-commitment-track-2 {
-  top: 2316px;
-  left: 233px;
-}
-.us-commitment-track-3 {
-  top: 2316px;
-  left: 337px;
-}
-.us-commitment-track-4 {
-  top: 2316px;
-  left: 442px;
-}
-
-
-
-
-.russian-capitulation-track {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-}
-.russian-capitulation-track.active {
-  background-image: url('/paths/img/russian_capit.png');
-  background-size: cover;
-}
-.russian-capitulation-track-1 {
-  top: 2507px;
-  left: 146px;
-}
-.russian-capitulation-track-2 {
-  top: 2507px;
-  left: 251px;
-}
-.russian-capitulation-track-3 {
-  top: 2507px;
-  left: 354px;
-}
-.russian-capitulation-track-4 {
-  top: 2507px;
-  left: 459px;
-}
-.russian-capitulation-track-5 {
-  top: 2507px;
-  left: 562px;
-}
-.russian-capitulation-track-6 {
-  top: 2507px;
-  left: 667px;
-}
-.russian-capitulation-track-7 {
-  top: 2507px;
-  left: 771px;
-}
-.russian-capitulation-track-8 {
-  top: 2507px;
-  left: 875px;
-}
-
-
-
-
-.allies-reserve-box {
-  top: 1310px;
-  left: 4275px;
-  position: absolute;
-  height: 340px;
-  width: 700px;
-  display: flex;
-  flex-direction: rows;
-}
-
-.central-reserve-box {
-  top: 870px;
-  left: 4275px;
-  position: absolute;
-  height: 340px;
-  width: 700px;
-  display: flex;
-  flex-direction: rows;
-}
-
-.allies-reserve-box .army-tile {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  max-width: 100px;
-  max-height: 100px;
-}
-
-.central-reserve-box .army-tile {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  max-width: 100px;
-  max-height: 100px;
-}
-
-.allies-eliminated-units-box
-  top: 2950px;
-  left: 1890px;
-  position: absolute;
-  height: 240px;
-  width: 410px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.central-eliminated-units-box {
-  top: 130px;
-  left: 1060px;
-  position: absolute;
-  height: 240px;
-  width: 410px;
-  display: flex;
-  flex-direction: column;
-}
-
-.crbox {
-    top: 851px;
-    left: 4250px;
-    width: 730px;
-    height: 380px;
-}
-.arbox {
-    top: 1280px;
-    left: 4250px;
-    width: 730px;
-    height: 380px;
-}
-.reserve-box.selectable::before {
-    width: inherit;
-    height: inherit;
-}
-
