--- a/mods/poker/web/css/poker-pot.css
+++ b/mods/poker/web/css/poker-pot.css
@@ -13,6 +13,7 @@
   margin-left: -8rem;
   z-index: 89;
   border-radius: 0 8rem 8rem 0;
+  user-select: none;
 }
 
 .pot:hover {
@@ -44,23 +45,36 @@
 
 /*  Details overlay */
 .pot-details-overlay {
-    min-width: 38rem;
-    max-width: 100vw;
-    padding: 1rem;
+    min-width: 58rem;
+    max-width: 90vw;
+    min-height: 38rem;
+    max-height: 90vh;
+
+    padding: 3rem;
+    background-image: url('/poker/img/poker-chip-values-colors.webp');
+    background-position: center;
+    background-size: cover;
+    font-size: 2rem;
+    user-select: none;
 }
 
 .pot-details-overlay .saito-table-row {
     grid-template-columns: 1fr 1fr min-content;
     margin: 1rem 0;
     align-items: center;
+    background: #CCCB;
+}
+
+.pot-details-overlay .saito-table-row:hover{
+    background: #222B;
 }
 
 .pot-details-overlay .player-name {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
 }
 
 .pot-details-overlay .player-bet {
-    font-size: 2rem;    
+    font-size: 2.6rem;    
 }
 
 @media screen and (max-width: 1000px) {
