fix crypto send ui errors changing the shape of the overlay

--- a/web/saito/css-imports/saito-wallet.css
+++ b/web/saito/css-imports/saito-wallet.css
@@ -666,6 +666,9 @@
   padding: 0rem 1rem;
   color: var(--saito-red);
   display: none;
+  position: absolute;
+  right: 3rem;
+  background: var(--background-color-alert-box);
 }
 
 .withdraw-submit.disabled {
