--- a/mods/poker/web/css/poker-cards.css
+++ b/mods/poker/web/css/poker-cards.css
@@ -17,8 +17,8 @@
 }
 
 .cardfan {
-  top: max(-7.5rem, -14vw);
-  left: 5px;
+  top: max(-10rem, -14vw);
+  left: calc(50% - min(15vh,17vw));
   height: calc(1.53 * min(15vh, 17vw));
   width: min(15vh,17vw);
 }
