fix: paths bugfixing

--- a/mods/paths/web/css/paths-welcome.css
+++ b/mods/paths/web/css/paths-welcome.css
@@ -54,7 +54,7 @@
 }
 
 .welcome-allies {
-	background-image: url('/paths/img/backgrounds/afs.jpg');
+	background-image: url('/paths/img/backgrounds/poppies.png');
 }
 
 @media screen and (max-width: 900px) {
